fix swawk button size on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,11 +34,11 @@
 }
 
 .storeNameCol, .storeNameColSelection{
-  width: 55%%;
+  width: 50%%;
 }
 
 .stockStatusCol{
-  width: 45%;
+  width: 50%;
 }
 
 .storeNameColSelection{
